manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-app
spec:
  selector:
    app: todo-list-app
  ports:
  - name: foo
    port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
