manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: todo-app-list
spec:
  rules:
  - host: workshop.step-up.uz
    http:
      paths:
      - backend:
          service:
            name: todo-list-app
            port:
              number: 80
        path: /
        pathType: Prefix
